--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,14 @@
     margin: 0;
     padding: 0;
     font-family: 'Mukta', sans-serif;
+    font-size: 30px;
     color: white;
 }
 
 .container {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 4fr;
 }
 
 header {
@@ -22,12 +23,32 @@ header {
 }
 
 .sidebar {
-    background-color: red;
+    background-color: #5DADE2;
     grid-row: 1 / auto;
-    padding-left: 15px;
-    padding-top: 20px;
+    display: grid;
+    grid-template-rows: 1fr 5fr 2fr;
+    padding-left: 20px;
 }
 
-.logo img {
-    width: 32px;
+.sidebar a {
+    text-decoration: none;
+    font-size: 20px;
+    margin-left: 10px;
 }
+
+.sidebar img {
+    width: 24px;
+}
+
+.logo {
+    width: 20px;
+}
+
+.sidebar-link {
+    /* display: grid;
+    grid-template-columns: 24px auto;
+    gap: 20px; */
+}
+
+
+
