--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,14 @@
 .container {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: minmax(200px, 1fr) 4fr;
+    grid-auto-rows: auto;
 }
 
 header {
     background-color: yellow;
     grid-column: 2 / 3;
+    grid-row: 1 / 2;
 }
 
 .main-content {
@@ -24,7 +26,7 @@ header {
 
 .sidebar {
     background-color: #5DADE2;
-    grid-row: 1 / auto;
+    grid-row: 1 / 3;
     display: grid;
     grid-template-rows: 1fr 5fr 2fr;
     padding-left: 20px;
