--- a/styles.css
+++ b/styles.css
@@ -157,3 +157,25 @@ header {
     font-weight: 600;
     color: black;
 }
+
+.btn-box {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(150px, 1fr));
+    align-content: center;
+}
+
+.action-btn {
+    appearance: button;
+    background-color: #405cf5;
+    border-radius: 2rem;
+    height: 44px;
+    font-size: 16px;
+    width: 80%;
+    outline: none;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+
+.action-btn:hover {
+    background-color: #16a34a;
+}
