--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,7 @@ header {
     grid-template-rows: min-content 1fr;
     gap: 15px;
     padding: 25px;
+    overflow: auto;
 }
 
 h4 {
@@ -201,16 +202,29 @@ h4 {
 
 .left-content .cards {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 250px;
+    gap: 2rem;
 }
 
 .project-card {
     display: flex;
     flex-direction: column;
     background-color: white;
+    border-left: 10px solid #03045E;
+    justify-content: space-around;
+    border-radius: 5px;
 }
 
+.actions {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    gap: 10px;
+    padding: 5px 10px;
+}
+
+.card-title,
 .card-text {
-    
+    padding: 0px 10px;   
 }
