--- a/styles.css
+++ b/styles.css
@@ -228,3 +228,16 @@ h4 {
 .card-text {
     padding: 0px 10px;   
 }
+
+.right-content {
+    display: grid;
+    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+}
+
+
+.announcements .cards {
+    background-color: white;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.4);
+}
