--- a/styles.css
+++ b/styles.css
@@ -242,3 +242,9 @@ h4 {
     border-radius: 5px;
     box-shadow: 2px 2px rgba(0, 0, 0, 0.4);
 }
+
+.trend-card img {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+}
